# monteeq

./: .gitignore  README.md  diagnose.py  docker-compose.yml  line_check.txt  montage.conf  package-lock.json  package.json  scratch_replace.py  start_services.sh
.github/workflows/: main.yml
admin-dashboard/: package-lock.json  package.json
admin-dashboard/src/: AdminChallenges.jsx  AdminPayouts.jsx  App.jsx  Dashboard.jsx  ErrorBoundary.jsx  Login.jsx  NotFound.jsx  StatsDetail.jsx  VideoApprovals.jsx  api.js  index.css
backend/: Dockerfile  change_password.py  check_db.py  check_videos.py  fix_avatars.py  localize_media.py  main.py  migrate_data.py  migrate_to_b2.py  requirements.txt  run_reset.bat  seed_db.py  supabase-conn.py  supabase_schema.sql  test_api_videos.py  verify_db_switch.py
backend/alembic/: env.py
backend/app/: worker.py
backend/scratch/: check_redis.py  check_tasks.py
backend/scripts/: migrate_to_gcs.py  seed_db.py  seed_demo_flash.py
backend/tests/: test_main.py
frontend/: Dockerfile  index.html  netlify.toml  package-lock.json  package.json  vite.config.js
frontend/public/: sw.js
frontend/src/: App.jsx  api.js  (+2 more)
video-service/: Cargo.toml  Dockerfile  rustfinity.json
video-service/free_test.mp4_hls/: 480p_000.ts  720p.m3u8  720p_000.ts  master.m3u8
video-service/pro_test.mp4_hls/: 1080p.m3u8  1080p_000.ts  480p.m3u8  480p_000.ts  720p.m3u8  720p_000.ts  master.m3u8
video-service/scripts/: video_recognition.py
video-service/src/: ax_status.rs  main.rs  models.rs  processor.rs  queue.rs  storage.rs  transcoder.rs  worker.rs
(+190 files in other folders)
